# helados-sofis-core

./: .env.example  Cargo.toml  README.md  docker-compose.test.yml  docker-compose.yml  modelo-datos-explicacion-detallada.md  plan-heladosSofis.prompt.md
migrations/: 001_initial.sql
src/: main.rs
src/modules/: mod.rs
src/modules/audit_log/application/: log_action.rs  mod.rs
src/modules/audit_log/domain/: entities.rs  repositories.rs
src/modules/auth/application/: google_login.rs  mod.rs
src/modules/auth/domain/: entities.rs
src/modules/cash_register/application/: manage_cash.rs  mod.rs
src/modules/cash_register/domain/: entities.rs  repositories.rs
src/modules/catalog/application/: crud.rs
src/modules/catalog/domain/: entities.rs  repositories.rs
src/modules/freezer_transfers/application/: manage_transfers.rs  mod.rs
src/modules/freezer_transfers/domain/: entities.rs  repositories.rs
src/modules/inventory/application/: manage_inventory.rs  mod.rs
src/modules/inventory/domain/: entities.rs  repositories.rs
src/modules/local_sales/application/: manage_local_sales.rs  mod.rs
src/modules/local_sales/domain/: entities.rs  repositories.rs
src/modules/owner_sales/application/: manage_owner_sales.rs  mod.rs
src/modules/owner_sales/domain/: entities.rs  (+1 more)
src/shared/: auth.rs  config.rs  db.rs  errors.rs  mod.rs
tests/: endpoint_catalog_tests.rs  endpoint_users_tests.rs  unit_tests.rs  use_case_catalog_tests.rs  use_case_inventory_tests.rs  use_case_pricing_tests.rs  use_case_users_tests.rs
tests/common/: db.rs  mocks.rs  mod.rs  seed.rs
(+51 files in other folders)
